Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-83095

[Qt3D] QQuickWidget : 3D object is not displayed sometimes when the window is resized

XMLWordPrintable

    • macOS, Windows
    • 2e3607aa120324f60832ca1cd42aaeaf22cc148d (qt/qt3d/dev) 83ee10ff799fa5892b14a677036fb445ae16b10b (qt/qt3d/5.15) f78171f76d769f84e13dec53354484de75a18c06 (qt/qt3d/5.12)

      Showing Qt3D by using QQuickWidget, the 3D object sometimes disappears when the window is resized.
      This only happens with QQuickWidget, not with QQuickView.

      It doesn't always happen but it's quite likely to happen.
      Also the problem is more likely to happen when there are multiple QQuickWidgets rather than having one QQuickWidget.

      Update: When not using ANGLE then this is solved in 5.14, however when ANGLE is turned on then this is still reproducible in all versions.

        1. WidgetsObjectNotDisplayedWORKS.zip
          6 kB
          Mike Krus
        2. WidgetsObjectNotDisplayed-angle.zip
          6 kB
          Andy Shaw
        3. Screenshot_051420_102807_AM.jpg
          868 kB
          Mike Krus
        4. Screenshot_051920_044404_PM.jpg
          1.02 MB
          Mike Krus
        For Gerrit Dashboard: QTBUG-83095
        # Subject Branch Project Status CR V

            mkrus Mike Krus
            nagrohn Nahomi Gröhn (Inactive)
            Votes:
            1 Vote for this issue
            Watchers:
            14 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes