Use surfaceSize as this will always be valid

This fixes an issue when resizing a Scene3D that is inside
a QQuickWidget to ensure that it has something rendered in
each frame.

Fixes: QTBUG-83095
Change-Id: Ic6c8b1b2efd0757f9f88768aafb331c4c1a1f9f2
Pick-to: 5.15
Pick-to: 5.12
Reviewed-by: Mike Krus <mike.krus@kdab.com>